--- a/Mar_Del'_Plat.mw
+++ b/Mar_Del'_Plat.mw
@@ -8,20 +8,22 @@
  | Eläjiden lugu = 593,337
  | Voz' = 2010
  | Pind = 79.48
- | Fail = Varese-Iluminada.jpg
- | Pämez' = 
+ | Fail = MDQMontage.jpg
+ | Pämez' = Gil'jermo Montenegro<br/>(tal'vku 2019—,<br/>''Guillermo Montenegro'')
  | Telefonkod = +54-(0)223
  | Aigvö = [[UTC]]−3
 }}
-'''Mar Del' Plat''' ({{lang-es|Mar del Plata}} «meri hobedan polhe») om [[Argentin]]an lidn da port [[Atlantine valdmeri|Atlantižen valdmeren]] randal. Mülüb [[Buenos Airesan agj]]aha.
+'''Mar Del' Plat''' ({{lang-es|Mar del Plata}} «meri hobedan polhe») om [[Argentin]]an lidn da port [[Atlantine valdmeri|Atlantižen valdmeren]] randal. Se om Heneral' Pueiredon-municipalitetan päpala, valdkundan seičemenz' lidn eläjiden lugun mödhe. Mülüb [[Buenos Airesan agj]]aha.
 
 == Istorii ==
-Nügüdläižen eländpunktan aluz om pandud vn 1874 10. päiväl uhokud. Vspäi 1911 raudte ühtenzoitab meriportad Buenos Airesanke.
+Nügüdläižen eländpunktan aluz om pandud vn 1874 10. päiväl uhokud. Vspäi 1911 raudte ühtenzoitab meriportad Buenos Airesanke. Meriport om saudud vll 1911−1916.
 
 Mar Del' Plat šingotase kurortižel turizmal, kalanpüdandan portal i kalan ümbriradmižel, pakuitezmašinoiden pästandal, tekstilin i polimeriden tehmižel. Kaks' laivankohenduztegint ratas lidnas.
 
 == Geografijan andmused ==
-Lidn sijadase valdkundan i agjan päivnouzmas, 38 m ü.m.t. keskmäižel korktusel. Matkad [[Buenos Aires]]aspäi om 400 km suvhe.
+Lidn sijadase valdkundan i agjan päivnouzmas, 38 m ü.m.t. keskmäižel korktusel. Matkad [[Buenos Aires]]hasai om 400 km pohjoižhe.
+
+Klimat om subtropine valdmeren. Kezakun-elokun keskmäine lämuz om +8..+9 C°, tal'vkun-uhokun +18..+20 C°. Voden keskmäine lämuz om +14 C°. Paneb sadegid 923 mm vodes.
 
 Vn 2010 Argentinan rahvahanlugemižen mödhe lidnan eläjiden lugu oli 593 337 ristitud.
 
