--- a/Mar_Del'_Plat.mw
+++ b/Mar_Del'_Plat.mw
@@ -23,7 +23,7 @@ Mar Del' Plat šingotase kurortižel turizmal, kalanpüdandan portal i kalan üm
 == Geografijan andmused ==
 Lidn sijadase valdkundan i agjan päivnouzmas, 38 m ü.m.t. keskmäižel korktusel. Matkad [[Buenos Aires]]hasai om 400 km pohjoižhe.
 
-Klimat om subtropine valdmeren. Kezakun-elokun keskmäine lämuz om +8..+9 C°, tal'vkun-uhokun +18..+20 C°. Voden keskmäine lämuz om +14 C°. Paneb sadegid 923 mm vodes.
+Klimat om ven valdmeren. Kezakun-elokun keskmäine lämuz om +8..+9 C°, tal'vkun-uhokun +18..+20 C°. Voden keskmäine lämuz om +14 C°. Paneb sadegid 926 mm vodes, redukus-sulakus 85..95 mm kus. Voib panda halad kezakus-sügüz'kus tobjimalaz, kaikiš madalamb registriruidud lämuz om −9 C°. Il'massad [[Antarktik]]aspäi vajehtadas säd teravas miččen taht voz'aigan.
 
 Vn 2010 Argentinan rahvahanlugemižen mödhe lidnan eläjiden lugu oli 593 337 ristitud.
 
