--- a/Polisajevo.mw
+++ b/Polisajevo.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Polisajevon lidnanznam
  | Flag text = Polisajevon flag
  | Valdkund = Venäma
- | Eläjiden lugu = 26,510
- | Voz' = 2017
- | Pind =
+ | Eläjiden lugu = 25,638
+ | Voz' = 2021
+ | Pind = 49,29
  | Fail =
- | Pämez' = Valerii Zikov (1994—)
+ | Pämez' = Valerii Zikov<br />(1994—)
  | Telefonkod = +7-38456-xx-xxx
  | Avtokod = 42. 142
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
@@ -19,7 +19,7 @@
 == Istorii ==
 Eländpunkt mainitase ezmäižen kerdan vl 1940 kuti žilo udenno «Polisajevskai»-kaivudenno. Kätihe sidä ''Polisajevo-radnikžiloks'' vl 1952. Mülütihe Polisajevo- i Krasnogorskii-žiloid [[Leninsk Kuzneckii|Leninsk Kuzneckijha]] vl 1987. Vn 1989 30. päiväl redukud erigoittihe Polisajevod i anttihe sille lidnan statusad.
 
-Lidn šingotase [[kivihil'|kivihilen]] samižel (3 kaivut i 2 küllästamižfabrikad), sauvondmaterialiden pästandal (raudbetontegim, plastikiknoiden fabrik, uksiden edheotand).
+Polisajevo šingotase [[kivihil'|kivihilen]] samižel (3 kaivut i 2 küllästamižfabrikad), sauvondmaterialiden pästandal (raudbetontegim, plastikiknoiden fabrik, uksiden edheotand).
 
 == Geografijan andmused ==
 Lidn sijadase [[In' (Obin alaližajogi)|Inänjogen]] ({{lang-ru|Иня́}}) oiktal randal, [[Kuzneckan katl'uz|Kuzneckan katl'usen]] keskuses, 250 m ü.m.t. keskmäižel korktusel. Matkad [[Kemerovo]]hosai om 85 km pohjoižhe orhal, 96 km avtol vai raudtedme. Lähembaižed lidnad oma [[Leninsk Kuzneckii]] ani lodeheze, kundaližen transportan maršrutad oma ühthižed kahtes lidnas, i [[Belovo]] 25 km suvhe.
@@ -27,9 +27,14 @@ Lidn sijadase [[In' (Obin alaližajogi)|Inänjogen]] ({{lang-ru|Иня́}}) oikt
 Krasnogorskii-žilo (2 965 rist. vl 2010) i Kaivuden nomer viž žilo (82 rist. vl 2010) mülüdas lidnümbrikho Polisajevon ližaks. Lidnümbrikon pind — 49,29 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 27 624 ristitud, lidnümbrikon — 30 671 ristitud. Kaikiš suremb lidnan ristitišt oli 32 400 eläjid vl 2001. Vl 2018 kaik 29 134 ristitud elädas lidnümbrikos.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 27 624 ristitud, lidnümbrikon — 30 671 ristitud. Kaikiš suremb lidnan ristitišt oli 32 400 eläjid vl 2001. Vl 2018 kaik 29 134 ristitud elihe lidnümbrikos.
 
-Polisajevon industrialine tehnikum om professionaližen opendusen aluzkundaks.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Serafim Sarovalaižen jumalanpert' i [[protestantizm]]an kaks' loičendpertid ([[baptizm]] i evangeližen uskondan hristanuskojad) oma olmas lidnas.
+
+Polisajevon industrialine tehnikum<ref>[http://pl25.ucoz.ru/ Polisajevon industrialižen tehnikuman sait (''pl25.ucoz.ru'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.polisaevo.ru/ Lidnümbrikon tobmuden aluzkundoiden oficialine sait (''polisaevo.ru'').] {{ref-ru}}
