+ galerei, +hom, aktualizacii

--- a/Prokopjevsk.mw
+++ b/Prokopjevsk.mw
@@ -1,15 +1,15 @@
 {{Eländpunkt
  | Nimi = Prokopjevsk<br />Прокопьевск
- | Lidnanznam = Coat of arms of Prokopyevsk.jpg
- | Flag = Flag of Prokopyevsk (Kemerovo Oblast).png
+ | Lidnanznam = Prokopievsk COA 2020.jpg
+ | Flag = Flag of Prokopyevsk.png
  | Lidnanznam text = Prokopjevskan lidnanznam
  | Flag text = Prokopjevskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 196,406
- | Voz' = 2017
+ | Eläjiden lugu = 187,877
+ | Voz' = 2021
  | Pind = 227.5
- | Fail = Площадь перед драматическим театром, 27 августа 2011 г..jpg
- | Pämez' = Andrei Mamaev<br />(kül'mku 2016—)
+ | Fail = Здание УК «Прокопьевскуголь», 26 мая 2007 г., панорама из 2-х кадров.jpg
+ | Pämez' = Maksim Škarabeinikov<br />(tal'vku 2021—)
  | Telefonkod = +7-3846-xxx-xxx
  | Avtokod = 42. 142
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
@@ -25,12 +25,30 @@ Prokopjevsk šingotase [[kivihil'|kivihilen]] samižel (kaivuz, kar'jer i Sibiri
 == Geografijan andmused ==
 Lidn sijadase Abanjogen ({{lang-ru|Аба́}}, 71 km pitte) keskjoksmusen randoil ([[Tom' (Obin ližajogi)|Tomin]] hura ližajogi, lankteb [[Novokuzneck]]as), 280 m ü.m.t. keskmäižel korktusel. Ottas vet Üläčumišan vezivaradimespäi 10 km päivlaskmha lidnaspäi. Matkad [[Altajan rand]]an röunhasai om 20 km päivlaskmha orhal, [[Kemerovo]]hosai om 168 km pohjoižhe orhal, 195 km avtotedme vai raudtel. Lähembaižed lidnad oma [[Kiselövsk]] ani pohjoižhe, kundaližen transportan maršrutad oma ühthižed kahtes lidnas, i [[Novokuzneck]] 10 km suvipäivnouzmha. Molembad lidnad mülüdas Novokuzneckan lidnaglomeracijha (1,15 mln rist. vl 2010).
 
-Prokopjevsk om lidnümbrikon üks'jäine eländpunkt. Lidn jagase koumhe rajonha, ned ei olgoi municipaližikš ühtnikoikš. Rajonad alajagasoiš 15 planiruindrajonha, märitud röunoidenke.
+Prokopjevsk om lidnümbrikon üks'jäine eländpunkt. Lidn jagase koumeks rajonaks, ned ei olgoi municipaližikš ühtnikoikš. Rajonad alajagasoiš 15 planiruindrajonaks, märitud röunoidenke.
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 210 130 ristitud. Kaikiš suremb ristitišt oli 292 tuh. eläjid vl 1962 i 278 tuh. eläjid vl 1987.
 
-Professionaližen opendusen aluzkundad: Prokopjevskan elektromašiništonsauvomižen tehnikum, tegimištoliž-ekonomine tehnikum, kaivuztehnine tehnikum, politehnikum, sauvondtehnikum, fizkul'turan tehnikum, transportine tehnikum, čomamahtoiden kolledž, Kemerovon agjan medicinižen kolledžan filial.
+Professionaližen opendusen aluzkundad: Prokopjevskan elektromašiništonsauvomižen tehnikum<ref>[http://www.pemstprk.ru/ Prokopjevskan elektromašiništonsauvomižen tehnikuman sait (''pemstprk.ru'').] {{ref-ru}}</ref>, tegimištoliž-ekonomine tehnikum, kaivuztehnine tehnikum<ref>[http://pgt.su/ Prokopjevskan kaivuztehnižen tehnikuman sait (''pgt.su'').] {{ref-ru}}</ref>, politehnikum, sauvondtehnikum, fizkul'turan tehnikum, transportine tehnikum, čomamahtoiden kolledž, Kemerovon agjan medicinižen kolledžan filial.
+
+Edeline lidnan pämez' om Andrei Mamaev (kül'mku 2016 — kül'mku 2021).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Buildings in Prokopyevsk.jpg|Lidnan fontan (2014)
+Прокопьевский собор.JPG|Joann-edelkävujan sündundan päjumalanpert', vn 2011 nägu
+Novotrans KVRP 1.jpg|Kuzbassan vagonankohendusen «Novotrans»-edheotand, kahtenden jonon avaiduz vl 2020
+Драмтеатр Прокопьевск.jpg|Prokopjevskan dramteatr Leninan komsomolan nimed (2015)
+ДК им. Артема-4.JPG|Kul'turkeskuz Artöman nimed (2012)
+Prokopyevsk Stadium.jpg|«Šahtör»-stadion (2014, ''Kaivai'')
+SG1S4234 Panorama.jpg|Travmatoligine läžundkodi (2013)
+Авто вокзал - panoramio.jpg|Lidnan avtostancii vl 2014
+Жд вокзал - panoramio (7).jpg|Prokopjevsk-päraudtestancijan sauvuz vl 2014
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://prkgorsovet.ru/ Prokopjevskan Rahvahan Ezitajiden Nevondkundan oficialine sait (''prkgorsovet.ru'').] {{ref-ru}}
