--- a/Rahad.mw
+++ b/Rahad.mw
@@ -18,6 +18,13 @@ Personaližed rahad oliba kävutandas nell' tuhad vozid tagaz völ, ned oliba ku
 
 Nügüd'aigan elektronižed rahad vajehtadas personaližid. Maksmižen tetpaižed abutused valdkundan territorijal oma banknotad i rahuded vaiše.
 
+== Rahoiže sidodud vepsän muštatišed ==
+<blockquote>
+* ''Ei sa rahoid sandal sada, a pidab pidandal pidada.''
+* ''Rahad da leib vellesed oma.''
+* ''Rahad ei olgoi sened, tal'vel-ki kazdas.''
+</blockquote>
+
 == Homaičendad ==
 <references />
 
