/* Tal'vhe sidodud vepsän muštatišed */ +

--- a/Tal'v.mw
+++ b/Tal'v.mw
@@ -11,6 +11,7 @@ Koume kud mülüb sihe — [[tal'vku]], [[viluku]] da [[uhoku]].
 * ''Kezal jügedemba radad, tal'vel kebnemba eläd.''
 * ''[[Miklanpei]] mäni, tal'v zavodiše.''
 * ''Päiv — kezahapäi, a sä tal'vhepäi.''
+* ''Rahad ei olgoi sened, tal'vel-ki kazdas.''
 * ''Sügüzel ö pimed, tal'vel päiv om must.''
 * ''Tal'vedme nägub keza.''
 * ''Vilu om tal'v, ka läm' keza.''
