--- a/Maižanduz.mw
+++ b/Maižanduz.mw
@@ -58,6 +58,11 @@ Maižanduz mülüb [[agrotegimištkompleks]]ha i mülütab alemba kirjutadud pä
 * [[sötmižtehmine]];
 * [[živatvodind]].
 
+== Maižandushe sidodud vepsän muštatiž ==
+<blockquote>
+* ''Ken rahnob, se i söb.''
+</blockquote>
+
 == Homaičendad ==
 <references />
 
