/* Sömhä sidodud vepsän muštatišed */ +

--- a/Söm.mw
+++ b/Söm.mw
@@ -21,6 +21,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 * ''Hüvä pudr, da penehk stauč.''
 * ''Kelel päd ed söta.''
 * ''Ken aigoiš libui, se i söi, a ken möhäs libui, se luzikan noli.''
+* ''Ken rahnob, se i söb.''
 * ''Keza keradab, a tal'v söb.''
 * ''Lapses om äi ližad: kalan sab da kaks' söb.''
 * ''Lehm tanhal — söm pertiš.''
