/* Ekonomikha sidodud vepsän muštatišed */ +

--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -28,6 +28,7 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 * ''Kebnas tuli, kebnas läksi.''
 * ''Kenen tavar, ka se i arvon paneb.''
 * ''Korman ei käske.'' (rahoid ei ole)
+* ''Kuverz' taht rada, hüvähä ei mäne.''
 * ''Küzuda eile vargastada. / Küzundas ei lögoi.''
 * ''Lämoipalod mustoil ed sambuta.''
 * ''Mez' nimel ei elä, a radol.''
