/* Rahoiže sidodud vepsän muštatišed */ +

--- a/Rahad.mw
+++ b/Rahad.mw
@@ -21,6 +21,7 @@ Nügüd'aigan elektronižed rahad vajehtadas personaližid. Maksmižen tetpaiže
 == Rahoiže sidodud vepsän muštatišed ==
 <blockquote>
 * ''Ei sa rahoid sandal sada, a pidab pidandal pidada.''
+* ''Korman ei käske.'' (rahoid ei ole)
 * ''Rahad da leib vellesed oma.''
 * ''Rahad ei olgoi sened, tal'vel-ki kazdas.''
 </blockquote>
