*Empty MediaWiki Message*

--- a/Raud.mw
+++ b/Raud.mw
@@ -16,7 +16,7 @@ Londuseline raud kogoneb nelläs stabiližes [[izotop]]aspäi: <sup>54</sup>Fe (
 == Himižed ičendad ==
 Metallal om luja himine reakcine mahtuz. Raud palab puhthan [[hapanik]]an atmosferas. Hen pölü voib virizuda iče [[il'm]]as. Ireg raud voib mülütada 0,8 procenthasai ližoid.
 
-== Raudha sidotud vepsän muštatišed ==
+== Raudha sidodud vepsän muštatišed ==
 <blockquote>
 * ''Ala pure raudad.''
 * ''Raud ei pala lämoiš.''
