/* Lämoihe sidodud vepsän muštatišed */ +

--- a/Lämoi.mw
+++ b/Lämoi.mw
@@ -21,6 +21,7 @@ Eziauguižešti ottihe lämoid kävutamižhe savun samižen täht lendajid gaved
 <blockquote>
 * ''Lämoid savuta ei olele.''
 * ''Palanu lämoid ei varaida, a upnu — vet.''
+* ''Raud ei pala lämoiš.''
 </blockquote>
 
 == Homaičendad ==
