*Empty MediaWiki Message*

--- a/Terminator_(fil'm).mw
+++ b/Terminator_(fil'm).mw
@@ -28,7 +28,7 @@
  | imdb_id      = 0088247
  | kp_id        = 
 }}
-'''«Terminator»''' ({{lang-en|The Terminator}}) om [[1984]]-nden voden [[AÜV|amerikalaine]] torafil'm.
+'''«Terminator»''' ({{lang-en|The Terminator}}) om vn [[1984]] [[AÜV|amerikaine]] torafil'm.
 
 Režissör — [[Kemeron Džeims|Džeims Kemeron]].
 
@@ -38,9 +38,11 @@ Režissör — [[Kemeron Džeims|Džeims Kemeron]].
 * ''Sara Konnor'' — [[Linda Hemilton]]
 * ''Ed Treksler'' — [[Pol Uinfild]]
 * ''Hel Vukovič'' — [[Lens Henriksen]]
+
 == Homaičendad ==
 <references/>
 
 {{stub}}
 [[Kategorii:AÜV:oiden fil'mad]]
 [[Kategorii:Vn 1984 fil'mad]]
+[[Kategorii:Torafil'mad]]
