--- a/Terminator_(fil'm).mw
+++ b/Terminator_(fil'm).mw
@@ -7,7 +7,7 @@
  | Kel'         = [[anglijan kel'|anglijan]]
  | Žanr         = torafil'm
  | Režissör     = [[Kemeron Džeims|Džeims Kemeron]]
- | Scenarii     = Džeims Kemeron, Geil En Hörd, Uiljam Višer 
+ | Scenarii     = Džeims Kemeron, Geil En Hörd, Uil'jam Višer-noremb
  | Muzikankirjutai = [[Bred Fidel']]
  | Idejan tegii = 
  | Aktörad      = [[Arnold Švarcenegger]]<br />[[Maikl Bin]]<br />[[Linda Hemilton]]<br />[[Lens Henriksen]]
@@ -18,26 +18,30 @@
  | Montaž       = 
  | Operator     = Adam Grinberg
  | Arvlahjad    = 
- | Büdžet       = 
- | Salhed       = 
+ | Büdžet       = 6,4 mln US$
+ | Salhed       = 78,3 mln US$
  | Salhed Venämas =  
  | Edeline fil'm    = 
- | Jäl'ghine fil'm  = 
+ | Jäl'ghine fil'm  = Terminator 2: Sudindpäiv
  | Röunatuz igäs = 
  | Sait         = 
  | imdb_id      = 0088247
  | kp_id        = 
 }}
-'''«Terminator»''' ({{lang-en|The Terminator}}) om vn [[1984]] [[AÜV|amerikaine]] torafil'm.
+'''«Terminator»''' ({{lang-en|The Terminator}}) om vn [[1984]] [[AÜV|amerikaine]] torafil'm tedoližen fantastikan žanras. Sai vn 1985 «[[Saturn (premii)|Saturn]]»-kinopremijad kut männuden voden parahim tedoliž-fantastine fil'm, parahim scenarii i grim.
 
 Režissör — [[Kemeron Džeims|Džeims Kemeron]].
+
+Süžetan keskuses om saldatan i robotan-terminatoran vastustelend, hö tuliba vodhe 1984 postapokaliptižes 2029. vodespäi. Terminatoran met om rikta Sara Konnor-neidišt, hänen ei sündnu völ poig vägesti ristitkundan sodad mašinoid vaste naceižes tulebas aigas. Kail Riz-saldat armastab Sarad i naprib telustada terminatorale. Robotan «I'll be back»-virkeh (''Linnen pördunu'') mülüb kaikiš tetabiden kinocitatoiden luguhu.
 
 == Rolid ==
 * ''Terminator'' — [[Arnold Švarcenegger]]
 * ''Kail Riz'' — [[Maikl Bin]]
 * ''Sara Konnor'' — [[Linda Hemilton]]
-* ''Ed Treksler'' — [[Pol Uinfild]]
-* ''Hel Vukovič'' — [[Lens Henriksen]]
+* ''Ed Treksler'', policijan leitnant — [[Pol Uinfild]]
+* ''Hel Vukovič'', detektiv — [[Lens Henriksen]]
+* ''Piter Zil'berman'', policijan lekar'-psihiatr — Erl Boen
+* ''Džindžer Ventura'', Saran neižne-sebranik — Bess Motta
 
 == Homaičendad ==
 <references/>
