*Empty MediaWiki Message*

--- a/Terminator_(fil'm).mw
+++ b/Terminator_(fil'm).mw
@@ -28,11 +28,11 @@
  | imdb_id      = 0088247
  | kp_id        = 
 }}
-'''«Terminator»''' ({{lang-en|The Terminator}}) om vn [[1984]] [[AÜV|amerikaine]] torafil'm tedoližen fantastikan žanras. Sai vn 1985 «[[Saturn (premii)|Saturn]]»-kinopremijad kut männuden voden parahim tedoliž-fantastine fil'm, parahim scenarii i grim.
+'''«Terminator»''' ({{lang-en|The Terminator}}) om vn [[1984]] [[AÜV|amerikaine]] torafil'm tedoližen fantastikan žanras. Sai vn 1985 «[[Saturn (premii)|Saturn]]»-kinopremijad kut männuden voden parahim tedoliž-fantastine fil'm, sen scenarii i grim oliba tundištadud voden parahimikš mugažo.
 
 Režissör — [[Kemeron Džeims|Džeims Kemeron]].
 
-Süžetan keskuses om saldatan i robotan-terminatoran vastustelend, hö tuliba vodhe 1984 postapokaliptižes 2029. vodespäi. Terminatoran met om rikta Sara Konnor-neidišt, hänen ei sündnu völ poig vägesti ristitkundan sodad mašinoid vaste naceižes tulebas aigas. Kail Riz-saldat armastab Sarad i naprib telustada terminatorale. Robotan «I'll be back»-virkeh (''Linnen pördunu'') mülüb kaikiš tetabiden kinocitatoiden luguhu.
+Süžetan keskuses om saldatan i robotan-terminatoran vastustelend, hö tuliba vodhe 1984 postapokaliptižes 2029. vodespäi. Terminatoran met om rikta Sara Konnor-neidišt, hänen ei sündnu völ poig oti vägestust ristitkundan sodas mašinoid vaste naceižes tulebas aigas. Kail Riz-saldat armastab Sarad i naprib telustada terminatorale. Robotan «I'll be back»-virkeh (''Linnen pördunu'') mülüb kaikiš tetabiden kinocitatoiden luguhu.
 
 == Rolid ==
 * ''Terminator'' — [[Arnold Švarcenegger]]
