--- a/Terminator_(fil'm).mw
+++ b/Terminator_(fil'm).mw
@@ -32,7 +32,10 @@
 
 Režissör — [[Kemeron Džeims|Džeims Kemeron]].
 
-Süžetan keskuses om saldatan i robotan-terminatoran vastustelend, hö tuliba vodhe 1984 postapokaliptižes 2029. vodespäi. Terminatoran met om rikta Sara Konnor-neidišt, hänen ei sündnu völ poig oti vägestust ristitkundan sodas mašinoid vaste naceižes tulebas aigas. Kail Riz-saldat armastab Sarad i naprib telustada terminatorale. Robotan «I'll be back»-virkeh (''Linnen pördunu'') mülüb kaikiš tetabiden kinocitatoiden luguhu.
+== Süžet ==
+Süžetan keskuses om saldatan i robotan-terminatoran vastustelend, hö tuliba vodhe 1984 postapokaliptižes 2029. vodespäi. Terminatoran met om rikta Sara Konnor-neidišt, hänen ei sündnu völ poig oti vägestust ristitkundan sodas mašinoid vaste naceižes tulebas aigas. Kail Riz-saldat armastab Sarad i naprib telustada terminatorale.
+
+Robotan «I'll be back»-virkeh (''Linnen pördunu'') mülüb kaikiš tetabiden kinocitatoiden luguhu, terminator sanui sidä edel policijan tarhan murendust avtol. Švarcenegger da toižed akt'orad toštiba virkeht toižiš fil'miš sen jäl'ghe.
 
 == Rolid ==
 * ''Terminator'' — [[Arnold Švarcenegger]]
