--- a/Avatar_(fil'm,_2009).mw
+++ b/Avatar_(fil'm,_2009).mw
@@ -4,41 +4,45 @@
  | Voz'         = 2009.
  | Valdkund     = {{USA}}
  | Kel'         = [[anglijan kel'|anglijan]]
- | Žanr         = torafil'm
+ | Žanr         = tedoline fantastik
  | Režissör     = [[Kemeron Džeims|Džeims Kemeron]]
  | Scenarii     = Džeims Kemeron
  | Muzikankirjutai = [[Džeims Horner]]
  | Idejan tegii = 
  | Aktörad      = [[Sem Uortington]]<br />[[Zoi Saldana]]<br />[[Sigurni Uiver]]<br />[[Stiven Leng]]
- | Prodüser     = 
+ | Prodüser     = Džeims Kemeron<br />Džon Landau
  | Kompanii     = [[Lightstorm Entertainment]]
  | Studii       =
- | Piduz        = 162 minutad
+ | Piduz        = 162 minutad (teatraline versii)<br />178 minutad (režissöran versii)
  | Montaž       = 
  | Operator     = Mauro Fiore
  | Arvlahjad    = 
- | Büdžet       = 
- | Salhed       = 
+ | Büdžet       = 237 mln US$
+ | Salhed       = 2,83 mlrd US$
  | Salhed Venämas =  
  | Edeline fil'm    = 
- | Jäl'ghine fil'm  = 
+ | Jäl'ghine fil'm  = Avatar 2
  | Röunatuz igäs = 
- | Sait         = 
+ | Sait         = http://avatar.com/
  | imdb_id      = 0499549
  | kp_id        = 
 }}
-'''«Avatar»''' ({{lang-en|Avatar}}) om [[2009]]-nden voden [[AÜV|amerikalaine]] torafil'm.
+'''«Avatar»''' ({{lang-en|Avatar}} [ˈæv.ə.tɑɹ]) om [[2009]]-nden voden [[AÜV|amerikaine]] tedoliž-fantastine fil'm, dramfil'm da torafil'm. Se sai kaikiš enamba sal'hid fil'miden keskes: vn 2021 kitajižen ozutesen jäl'ghe — 2,8 mlrd US$. Anttihe «[[Oskar (premii)|Oskar]]»-premijad vn 2010 7. keväz'kud koumes nominacijas: parahimad pirdajan-lavastajan rad, operatoran rad, vizualižed effektad.
 
 Režissör — [[Kemeron Džeims|Džeims Kemeron]].
+
+Fil'man tegend mäneb vl 2154. Ristitkund sab kalližarvošt anobtanium-mineralad gazplanetan Pandor-kaimdajal Kentavran Al'fa-tähtazsistemas. Süžetan mödhe, resursansai korporacii grazib gumanoidoiden sijaližen na'vi-heimon olendale olmas. Avatarad oma projektiruidud genetižikš hibjad, na'vi:den i ristituiden gibridad. Tedomehiden jouk kävutab heid planetan tedoidusen täht, tegeb kosketusid Pandoran sijaližidenke eläjidenke.
 
 == Rolid ==
 * ''Džeik Salli'' — [[Sem Uortington]]
 * ''Neitiri'' — [[Zoi Saldana]]
 * ''Greis Ogustin'' — [[Sigurni Uiver]]
 * ''Mailz Guoritč'' — [[Stiven Leng]]
+
 == Homaičendad ==
 <references/>
 
 {{stub}}
 [[Kategorii:AÜV:oiden fil'mad]]
 [[Kategorii:Vn 2009 fil'mad]]
+[[Kategorii:Tedoliž-fantastižed fil'mad]]
