*Empty MediaWiki Message*

--- a/Avatar_(fil'm,_2009).mw
+++ b/Avatar_(fil'm,_2009).mw
@@ -1,5 +1,5 @@
 {{Fil'm
- | Nimi         = Avatar<br />Avatar
+ | Nimi         = Avatar
  | Kuvan ümbrikirjutand = 
  | Voz'         = 2009.
  | Valdkund     = {{USA}}
@@ -27,7 +27,7 @@
  | imdb_id      = 0499549
  | kp_id        = 
 }}
-'''«Avatar»''' ({{lang-en|Avatar}} [ˈæv.ə.tɑɹ]) om [[2009]]-nden voden [[AÜV|amerikaine]] tedoliž-fantastine fil'm, dramfil'm da torafil'm. Se sai kaikiš enamba sal'hid fil'miden keskes: vn 2021 kitajižen ozutesen jäl'ghe — 2,8 mlrd US$. Anttihe «[[Oskar (premii)|Oskar]]»-premijad vn 2010 7. keväz'kud koumes nominacijas: parahimad pirdajan-lavastajan rad, operatoran rad, vizualižed effektad.
+'''«Avatar»''' (mugažo [[anglijan kel'|anglijan kelel]], virktas [ˈæv.ə.tɑɹ]) om [[2009]]-nden voden [[AÜV|amerikaine]] tedoliž-fantastine fil'm, dramfil'm da torafil'm. Se sai kaikiš enamba sal'hid fil'miden keskes: vn 2021 kitajižen ozutesen jäl'ghe — 2,8 mlrd US$. Anttihe «[[Oskar (premii)|Oskar]]»-premijad vn 2010 7. keväz'kud koumes nominacijas: parahimad pirdajan-lavastajan rad, operatoran rad, vizualižed effektad.
 
 Režissör — [[Kemeron Džeims|Džeims Kemeron]].
 
