+ galerei, +hom, aktualizacii

--- a/Osinniki.mw
+++ b/Osinniki.mw
@@ -1,19 +1,20 @@
 {{Eländpunkt
  | Nimi = Osinniki<br />Осинники
- | Lidnanznam =
- | Flag =
- | Lidnanznam text =
- | Flag text =
+ | Lidnanznam = Osinniki COA (2019).gif
+ | Flag = Flag of Osinniki.svg
+ | Lidnanznam text = Osinnikin lidnanznam
+ | Flag text = Osinnikin flag
  | Valdkund = Venäma
- | Eläjiden lugu = 43,008
- | Voz' = 2017
- | Pind =
+ | Eläjiden lugu = 41,274
+ | Voz' = 2021
+ | Pind = 71,36
  | Fail = Ossinniki-LM93-65-01.jpg
  | Pämez' = Igor' Romanov<br />(reduku 2017—)
  | Telefonkod = +7-38471-xx-xxx
  | Avtokod = 42. 142
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
+[[Fail:Straßenbahn-Ossinniki.png|thumb|left|250px|Lidnan tramvaiteiden kart (2014)]]
 '''Osinniki''' ({{lang-ru|Осинники}} «habikod») om [[Venäma]]n lidn [[Kemerovon agj]]an suves. Se om Osinnikin lidnümbrikon administrativine keskuz (vspäi 2005).
 
 == Istorii ==
@@ -26,14 +27,26 @@ Osinniki šingotase [[kivihil'|kivihilen]] samižel («Osinnikovskai»-kaivuz), 
 == Geografijan andmused ==
 Lidn sijadase Kondomanjogen oiktal randal ([[Tom' (Obin ližajogi)|Tomin]] hura ližajogi), 230 m ü.m.t. keskmäižel korktusel. Kandalep-jogeihut läbitab lidnad i lankteb Kondomha oiktalpäi. Matkad [[Kemerovo]]hosai om 210 km pohjoižhe-lodeheze orhal, 247 km avtol vai raudtedme. Osinniki mülüb Novokuzneckan lidnaglomeracijha (1,15 mln rist. vl 2010) i om ümbärtud [[Novokuzneckan rajon]]al. Lähembaižed lidnad oma [[Novokuzneck]] 10 km lodeheze röunhasai i [[Kaltan]] 10 km suvipäivlaskmha.
 
-Taižin-žilo ({{lang-ru|Тайжина}}, 4 812 rist. vl 2017) mülüb lidnümbrikho Osinnikin ližaks, edel 2011 vot toižed žilod mülüiba. Lidnümbrikon pind — 71,36 km².
+Taižin-žilo ({{lang-ru|Тайжина}}, 4 812 rist. vl 2017) mülüb lidnümbrikho Osinnikin ližaks, edel 2011. vot toižed žilod mülüiba. Lidnümbrikon pind — 71,36 km².
 
 == Eläjad da transport ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 46 001 ristitud, lidnümbrikon — 60 918 ristitud. Kaikiš suremb lidnan ristitišt oli 71 tuhad eläjad vl 1962. Vl 2018 kaik 47 248 ristitud elädas lidnümbrikos. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Pühän Stroican i Illöi-endustajan jumalanpertid om olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 46 001 ristitud, lidnümbrikon — 60 918 ristitud. Kaikiš suremb lidnan ristitišt oli 71 tuhad eläjad vl 1962. Vl 2018 kaik 47 248 ristitud elihe lidnümbrikos.
 
-Osinnikin politehnine tehnikum i kaivuztehnine kolledž oma professionaližen opendusen aluzkundoikš.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' jumalanpertid<ref>[http://sobory.ru/geo/locat/14863 Osinnikin pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> oma olmas lidnas: Pühän Stroican i Illä-endustajan.
+
+Osinnikin politehnine tehnikum<ref>[http://gpouopt.ru/ Osinnikin politehnižen tehnikuman sait (''gpouopt.ru'').] {{ref-ru}}</ref> i kaivuztehnine kolledž<ref>[http://ogtk.org/ Osinnikin kaivuztehnižen kolledžan sait (''ogtk.org'').] {{ref-ru}}</ref> oma professionaližen opendusen aluzkundoikš.
 
 Avtobusad, maršruttaksid i tramvaid oma kundaližeks transportaks lidnas. Osinniki-raudtestancii (ende Kandalep jogen mödhe) i 405. km-platform oma saudud «Novokuzneck — [[Taštagol]]»-raudtel.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Ossinniki-LM99K-68-01.jpg|LM99K-serijan tramvai jonol (2011)
+Родник с содержанием серебра - panoramio.jpg|Purde hobedan mülündanke (2014)
+Ossinniki-LM99AVN-69-01.jpg|Tramvaidepo vl 2011
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.osinniki.org/ Lidnan tobmuden aluzkundoiden oficialine sait (''osinniki.org'').] {{ref-ru}}
