--- a/Reboi.mw
+++ b/Reboi.mw
@@ -28,9 +28,9 @@ Reboiden mujutuz da suruz oma sortukahad erazvuiččiš tahoiš; om 40..50 reboi
 Reboiden karv zavodib lähtta uhokul da keväz'kul, lopib kezan keskuses. Sen jäl'ghe reboil kazvaškandeb jo tal'vkarv, kudamb formiruiše kül'mkuks-tal'vkuks. Kezakarv om harvamb da lühüdamb, tal'veline nahk — paksumb da rohlamb.
 
 == Elonlad ==
-Kut [[händikaz]]-ki, reboi om monogamine živat, toižin sanoin, poigiše se vaiše ühten kerdan vodes. «Gon» oleskeleb tal'ven lopus. Noren jäl'gpol'ven kazvatusen täht hö kaidas süväd urud vai «ottas velgha» verhad urud toižil živatoilpäi. Kohtuz jätktase 44..58 päiväd, reboil sündudas 4..6 poigašt, hö imedas mamanmaidod 1..1,5 kun igähäsai da kazdas toižeks vodeks. Necil toižel vodel hö opendase tehta kaik, mi pidab teta reboile — ozutesikš, mecata.
+Kut [[händikaz]]-ki, reboi om monogamine živat, toižin sanoin, poigiše se vaiše ühten kerdan vodes. «Gon» oleskeleb tal'ven lopus. Noren jäl'gpol'ven kazvatusen täht hö kaidas süväd urud vai «ottas velgha» verhad urud toižil živatoilpäi. Kohtuz jätktase 44..58 päiväd, reboil sündudas nell'-kuz' poigašt, hö imedas mamanmaidod üks'..pol'tošt kun igähäsai da kazdas toižeks vodeks. Necil toižel vodel hö opendase tehta kaik, mi pidab teta reboile — ozutesikš, mecata.
 
-Meclonduses reboid harvas elädas enamb 7 vot. Valdatomudes hö elädas 20..25 vot.
+Meclonduses reboid harvas elädas enamb seičemed vot. Valdatomudes hö elädas 20..25 vot.
 
 == Ičtazvedand ==
 Ku reboi om tünäs, ka se mäneb kohtha, jättab jäl'giden sel'ktoid čepid. Pöl'gästunu živat voib joksta lujas teravas, hüptel vai ani levigandes madme oigetud händanke.
@@ -47,18 +47,18 @@ Reboi om [[mectuz|mectusen]] objektaks, znamasine živat nahkan samha. 19. voz's
 
 Mugažo reboid oma nühtajiden — villän kulutajiden — znamasižed söjad.
 
-== Reboihe sidotud vepsän muštatišed ==
+== Reboihe sidodud vepsän muštatišed ==
 <blockquote>
 * ''Häkätab kuti kezareboi.''
 * ''Kaikutte reboi ičeze händan kitäb.''
 </blockquote>
 
 == Galerei ==
-<center><gallery perrow="3">
-Fail:Common foxes in the snow.jpg|Reboid lumes
-Fail:RenardCrâne.jpg|Reboin pämall'
-Fail:Vulpes vulpes at shipwreck.jpg|Reboi
-</gallery></center>
+<gallery mode="packed" heights="125px">
+Common foxes in the snow.jpg|Reboid lumes
+RenardCrâne.jpg|Reboin pämall'
+Vulpes vulpes at shipwreck.jpg|Reboi
+</gallery>
 
 == Homaičendad ==
 <references />
