--- a/Čomuz.mw
+++ b/Čomuz.mw
@@ -14,6 +14,7 @@ Ristitun čomuz oleleb hibjan da irdpol'ne čomuz, i hengeline čomuz. Čomuden 
 == Čomudehe sidodud vepsän muštatišed ==
 <blockquote>
 * ''Čoma i unes čoma.''
+* ''Čoma sana i kivehe reigun tegeb.''
 * ''Ei kalliž ole čomuz, a kalliž om pä.''
 * ''Ičeiž mad armhembad, ičeiž mecad čomembad.''
 * ''Kand sädota, ka mugažo čoma linneb.''
