/* Sanha sidodud vepsän muštatišed */ +

--- a/Sana.mw
+++ b/Sana.mw
@@ -10,6 +10,7 @@ Klassificiruidas vaihid leksižen znamoičendan mödhe, sätas nimikirjutesid ez
 == Sanha sidodud vepsän muštatišed ==
 <blockquote>
 * ''Ala pagiže min tedad, a teda min pagižed.''
+* ''Čoma sana i kivehe reigun tegeb.''
 * ''Ei sur' sana sud haugoi.''
 * ''Paha kel' pahan i pagižeb.''
 * ''Pajatada om paremb ühtes, a pagišta eriži.''
