--- a/Elo.mw
+++ b/Elo.mw
@@ -14,13 +14,14 @@ Nene tundused harakterizuidas eläbad materijad: [[organizm|organizacii]], [[sub
 
 Man irdpolel elo ei löudand, kosmine biologii tedoidab sen tundusid da gipotetižid formid. Ratud elo om olmas laboratorijan turuškastjoiš, ratud vauktušiš, mikroprocessoriš i robotoiš, no ristit ei voind säta elod auguspäi täuzin. [[Religii]] el'getab elod surman jäl'ghe (eläbzduz, toštmižsündund-reinkarnacii i surmanjäl'ghine andmine). Rideltas [[kolmatomuz|kolmatomuden]] ristitun i [[heng]]en olendas olmas.
 
-== Eloho sidotud vepsän muštatišed ==
+== Eloho sidodud vepsän muštatišed ==
 <blockquote>
 * ''Ala varaida kolnut, varaida eläbad.''
 * ''Elo meleta kuti puzu reigunke.''
 * ''Eraz eläb, ku puzuhu paneb, a toine eläb, ku märgän mecan poltab.''
 * ''Igän eläd, igän openud.''
 * ''Ken hätken eläb, se enamban nägeb.''
+* ''Ken ridata eläb, se abidata koleb.''
 </blockquote>
 
 == Kacu mugažo ==
