--- a/Ristit.mw
+++ b/Ristit.mw
@@ -27,6 +27,7 @@ Ristitun erigoičijad päpirdad oma püštoiged kävund, šingotadud päaivod, m
 * ''Järed da äred, pen' da mahtav.''
 * ''Kana eile lind, ak eile ristit.''
 * ''Ni küläs kündai, ni lidnas lendai.'' (nimihe ei sättu ristitun polhe)
+* ''Pahal ristitul mugomad i paginad.''
 * ''Pen' da tark, sur' da šläbäk.''
 * ''Ristit koleb, a živat kadob.''
 * ''Äi om hüvid, da vähä om armhid.''
