/* Sanha sidodud vepsän muštatišed */ +

--- a/Sana.mw
+++ b/Sana.mw
@@ -13,6 +13,7 @@ Klassificiruidas vaihid leksižen znamoičendan mödhe, sätas nimikirjutesid ez
 * ''Čoma sana i kivehe reigun tegeb.''
 * ''Ei sur' sana sud haugoi.''
 * ''Paha kel' pahan i pagižeb.''
+* ''Pahal ristitul mugomad i paginad.''
 * ''Pajatada om paremb ühtes, a pagišta eriži.''
 * ''Sanal voib mez' rikta.''
 * ''Sanoišpäi leibäd ed pašta.''
