/* Mustikaižhe sidotud vepsän muštatišed da ozoitesed */ +

--- a/Mustikaine.mw
+++ b/Mustikaine.mw
@@ -93,10 +93,11 @@ Fail:Vaccinium myrtillus (Larvik).JPG|Mustikaine umbikoil<br />(Larvik, Norvegii
 Fail:BilberriesBig.jpg|Mustikaižen marjad
 </gallery></center>
 
-== Mustikaižhe sidotud vepsän muštatišed da ozoitesed ==
-=== Muštatiž ===
+== Mustikaižhe sidodud vepsän muštatišed da ozoitesed ==
+=== Muštatišed ===
 <blockquote>
 * ''Ičein ma manzikaine, veraz ma mustikaine.''
+* ''Sapkoid kuluta ed — mustikašt sö ed.''
 </blockquote>
 
 === Ozoitez ===
