/* Sömhä sidodud vepsän muštatišed */ +

--- a/Söm.mw
+++ b/Söm.mw
@@ -34,6 +34,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 * ''Mitte samine, mugoi i sömine.''
 * ''Nagrižpirgas eile sömäd, nekrutas eile oluhad.''
 * ''Rad radon sijas, a sönd — söndan sijas.''
+* ''Sapkoid kuluta ed — mustikašt sö ed.''
 * ''Sö čomad lent i pida čomad mel't.''
 * ''Sö kromaine, ka linned priha čomaine.''
 * ''Söid kut siga, läksid kut koza.''
