/* Maižandushe sidodud vepsän muštatiž */ +

--- a/Maižanduz.mw
+++ b/Maižanduz.mw
@@ -58,9 +58,10 @@ Maižanduz mülüb [[agrotegimištkompleks]]ha i mülütab alemba kirjutadud pä
 * [[sötmižtehmine]];
 * [[živatvodind]].
 
-== Maižandushe sidodud vepsän muštatiž ==
+== Maižandushe sidodud vepsän muštatišed ==
 <blockquote>
 * ''Ken rahnob, se i söb.''
+* ''Min semendad, sen i rahnod.''
 </blockquote>
 
 == Homaičendad ==
