--- a/Ristit.mw
+++ b/Ristit.mw
@@ -30,6 +30,7 @@ Ristitun erigoičijad päpirdad oma püštoiged kävund, šingotadud päaivod, m
 * ''Pahal ristitul mugomad i paginad.''
 * ''Pen' da tark, sur' da šläbäk.''
 * ''Ristit koleb, a živat kadob.''
+* ''Sogedale kulub, a kurdhele nägub.''
 * ''Äi om hüvid, da vähä om armhid.''
 </blockquote>
 
