--- a/Nagr.mw
+++ b/Nagr.mw
@@ -1,9 +1,16 @@
 [[Fail:Smiling girl.jpg|thumbnail|right|250px|Nagrai neižne]]
-'''Nagr''' om üks' [[ristit]]un reakcijoišpäi [[jumor]]ha vai [[kučutez|kučuteshe]], kudamban avaidused oma specifižed kulundad i modon [[lihazed|lihasiden]] da [[hengimižapparat]]an instinktivižed likundad. Erašti nagr voib olda reakcijan nervkingiteshe (nervine narg), agressijan tundusen vai olda [[psihine palahtelend|psihižen palahtelendan]] tundusen.
+'''Nagr''' vai '''Nagrand''' om üks' [[ristit]]un reakcijoišpäi [[jumor]]ha vai [[kučutez|kučuteshe]], kudamban avaidused oma specifižed kulundad i modon [[lihazed|lihasiden]] da [[hengimižapparat]]an instinktivižed likundad. Erašti nagr voib olda reakcijan nervkingiteshe (nervine narg), agressijan tundusen vai olda [[psihine palahtelend|psihižen palahtelendan]] tundusen.
 
 Ühthine nagr om [[socializacii|socializacijan]] da [[kommunikativine kompetentižuz|kommunikativižen kompetentižusen]] lujaks faktoraks.
 
 Nagr oli [[ristitunvuiččed oblezjanad|ristitunvuiččiden oblezjanoiden]] i ristitun ühthižil ezitatoil 10 mln vozid tagaz völ, kut vastuz kučuteshe. Oblezjanan nagr erineb ristitun nagraspäi, no voib tundištada sidä. 20. voz'sadan lopun tedoidusiden mödhe [[nüguhir'|nüguhired]] sätas märitud ul'trakulundan signalid 50 kHz paksudenke kučutesen aigan.
+
+== Nagrha sidodud vepsän muštatišed ==
+<blockquote>
+* ''Ehtal itkend, homencel nagrand.''
+* ''Kažin nagr, hiren voik.''
+* ''Om paremb kacta nagrajan suhu, mi itkijan.''
+</blockquote>
 
 == Homaičendad ==
 <references />
