--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -23,6 +23,7 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 * ''Edemba hutid, lähemba otad.''
 * ''Ei katil keita, a emäg.''
 * ''Ei küzugoi, teravas-ik radab, küzutas, ken radab.''
+* ''Elokahanke ei sa suttäs, vägevanke ei ca borcuidas.''
 * ''Hüvä da veraz, paha da ičeiž.''
 * ''Kaht jänišad küksendeled, ni üht ed tabada.''
 * ''Kebnas tuli, kebnas läksi.''
