/* Čomudehe sidodud vepsän muštatišed */ +

--- a/Čomuz.mw
+++ b/Čomuz.mw
@@ -18,6 +18,7 @@ Ristitun čomuz oleleb hibjan da irdpol'ne čomuz, i hengeline čomuz. Čomuden 
 * ''Ei kalliž ole čomuz, a kalliž om pä.''
 * ''Ičeiž mad armhembad, ičeiž mecad čomembad.''
 * ''Kand sädota, ka mugažo čoma linneb.''
+* ''Kuna sündud, sid' i čoma.''
 * ''Lop om čoma, ka i kaik om čoma.''
 * ''Neiččen ezmäine oza — čoma roža.''
 * ''Sigä om čoma, kus meid ei ole.''
