--- a/Izo_Lizoi.mw
+++ b/Izo_Lizoi.mw
@@ -1,6 +1,7 @@
-[[Fail:Izo Lizoi.jpg|thumb|right|250px|Pästandan kirjankor'.]]
-'''"Izo Lizoi"''' om [[Zaiceva Nina|Nina Zaicevan]] runokogoduz [[vepsän kel'|vepsän kelel]] norembile škol'nikoile. Se om pästtud vodel [[2005]] [[Petroskoi]]š.
+[[Fail:Izo Lizoi.jpg|thumb|right|250px|Pästandan kirjankor']]
+'''«Izo Lizoi»''' om [[Zaiceva Nina|Nina Zaiceva]]-kirjutajan runokogoduz [[vepsän kel'|vepsän kelel]] norembile škol'nikoile. Kirj om pästtud [[Petroskoi]]he vodel [[2005]].
 
+{{stub}}
 [[Kategorii:Nina Zaiceva]]
 [[Kategorii:Kirjad vepsän kelel]]
 [[Kategorii:Kirjad kirjamišton mödhe]]
