([[c:GR|GR]])  [[File:Flag of Siauliai.JPG]] → [[File:Flag of Šiauliai.svg]] vva

--- a/Šäuläi.mw
+++ b/Šäuläi.mw
@@ -1,7 +1,7 @@
 {{Eländpunkt
  | Nimi = Šäuläi<br />Šiauliai
  | Lidnanznam = Coat of arms of Šiauliai Grand (Lithuania).svg
- | Flag = Flag of Siauliai.JPG
+ | Flag = Flag of Šiauliai.svg
  | Lidnanznam text = Šäuläin lidnanznam
  | Flag text = Šäuläin flag
  | Valdkund = Litvanma
