--- a/Venälaižen_valdkundan_pämehed.mw
+++ b/Venälaižen_valdkundan_pämehed.mw
@@ -1,4 +1,5 @@
 [[Fail:Standard of the President of the Russian Federation.svg|border|right|250px]]
+[[Fail:USSR, Flag commander 1964.svg|border|right|250px]]
 [[Fail:Imperial Standard of the Emperor of Russia (1858–1917).svg|border|right|250px]]
 [[Fail:Flag of the Tzar of Muscovia.svg|border|right|250px]]
 Se om '''täuz' Venälaižen valdkundan pämehiden nimikirjutez'''.
