--- a/Vepsän_rahvhan_sarnad_(1996).mw
+++ b/Vepsän_rahvhan_sarnad_(1996).mw
@@ -1,14 +1,14 @@
 [[Fail:Vepsskie skazki.jpg|right|thumb|150px|Pästandan kirjankor']]
-'''«Vepsän rahvhan sarnad»''' om [[vepsläižed|vepsläižiden]] sarnoiden ''paginal'ne'' kogoduz [[vepsän kel'|vepsän]] i [[venäkel'|venän]] kelil. Se om pästtud [[Petroskoi]]he vodel [[1996]].
+'''«Vepsän rahvhan sarnad»''' (''rahvhan'' — muga om originalas) om [[vepsläižed|vepsläižiden]] sarnoiden ''paginal'ne'' kogoduz [[vepsän kel'|vepsän]] i [[venäkel'|venän]] kelil. Se om pästtud [[Petroskoi]]he vodel [[1996]], 261 lehtpol't.
 
-Kirjan tegijad oma [[Zaiceva Marja|Marija Zaiceva]] da [[Onegina Nina|Nina Onegina]].
+Kirjan kogodajad oma [[Zaiceva Marja|Marija Zaiceva]] da [[Onegina Nina|Nina Onegina]].
 
-Kirjas om [[55 (lugu)|55]] sarnad [[13 (lugu)|13]] vepsän küläspäi. Nenišpäi [[22 (lugu)|22]] sarnad oliba kirjutadud [[Karjalan Tazovaldkund]]as ([[Šoutjärv']], [[Mecantaga]], [[Kaleig]], [[Šokš]], [[Matfejansel'g]], [[Tihoništ]]), [[19 (lugu)|19]] — [[Leningradan agj]]as ([[Ladv]], [[Järved]], [[Pecoil]], [[Šidjärv]], [[Sodjärv]]), i [[14 (lugu)|14]] sarnad — [[Vologdan agj|Vologdan agj]]as ([[Pondal]], [[Kuja]]).
+Kirjas om pästtud 55 sarnad [[13 (lugu)|13]] vepsän küläspäi. Nenišpäi [[22 (lugu)|22]] sarnad oliba kirjutadud [[Karjalan Tazovaldkund]]as ([[Šoutjärv']], [[Mecantaga]], [[Kaleig]], [[Šokš]], [[Matfejansel'g]], [[Tihoništ]]), [[19 (lugu)|19]] — [[Leningradan agj]]as ([[Ladv]], [[Järved]], [[Pecoil]], [[Šidjärv]], [[Sodjärv]]), i [[14 (lugu)|14]] sarnad — [[Vologdan agj|Vologdan agj]]as ([[Pondal]], [[Kuja]]).
 
 Nece kirj om arvokaz lujas ei vepsän fol'kloristikale vaiše, no vepsän paginantedole-ki.
 
 == Irdkosketused ==
-* [http://veps-kir.ucoz.ru/publ/vepsan/vepsan_rahvhan_sarnad/13 Erased sarnad kirjaspäi kirilližel kirjamištol ''veps-kir.ucoz.ru''-saital.]
+* [http://veps-kir.ucoz.ru/publ/vepsan/vepsan_rahvhan_sarnad/13 Erased sarnad kirjaspäi kirilližel kirjamištol ''veps-kir.ucoz.ru''-saital.] {{ref-vep}} <small>''(lehtpolin menün pala om venän kelel)''</small>
 
 [[Kategorii:Kirjad kirjamišton mödhe]]
 [[Kategorii:Kirjad vepsän kelel]]
