--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -24,6 +24,7 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 * ''Ei katil keita, a emäg.''
 * ''Ei küzugoi, teravas-ik radab, küzutas, ken radab.''
 * ''Elokahanke ei sa suttäs, vägevanke ei ca borcuidas.''
+* ''Elokaz kut zatrib, a goll' kut voib.''
 * ''Hüvä da veraz, paha da ičeiž.''
 * ''Kaht jänišad küksendeled, ni üht ed tabada.''
 * ''Kebnas tuli, kebnas läksi.''
