/* Sanha sidodud vepsän muštatišed */ +

--- a/Sana.mw
+++ b/Sana.mw
@@ -22,6 +22,7 @@ Klassificiruidas vaihid leksižen znamoičendan mödhe, sätas nimikirjutesid ez
 * ''Teravas sanutud, da ei teravas tehtud.''
 * ''Vähemba pagiže, enamban tedad.''
 * ''Äi sanoid, da vähä azjoid.''
+* ''Äjan tedad, vähä pagiže.''
 </blockquote>
 
 == Homaičendad ==
