/* Tedoho sidodud vepsän muštatišed */ +

--- a/Tedo.mw
+++ b/Tedo.mw
@@ -19,6 +19,7 @@ Avar tedo mülütab töhišton kaikid arvoimižid da komponentid:
 * ''Ala pagiže min tedad, a teda min pagižed.''
 * ''Keletoi kaikiš enamban tedab.''
 * ''Vähemba pagiže, enamban tedad.''
+* ''Äjan tedad, vähä pagiže.''
 </blockquote>
 
 == Homaičendad ==
