/* Eloho sidodud vepsän muštatišed */ +

--- a/Elo.mw
+++ b/Elo.mw
@@ -22,6 +22,7 @@ Man irdpolel elo ei löudand, kosmine biologii tedoidab sen tundusid da gipoteti
 * ''Igän eläd, igän openud.''
 * ''Ken hätken eläb, se enamban nägeb.''
 * ''Ken ridata eläb, se abidata koleb.''
+* ''Ken tirpab, se hätken eläb.''
 </blockquote>
 
 == Kacu mugažo ==
