/* Eländkodihe sidodud vepsän muštatiž */ +

--- a/Eländkodi.mw
+++ b/Eländkodi.mw
@@ -179,9 +179,10 @@ Vogelhaus Modell Eduard 4.JPG|Lindpertiine todesižen küläkodin kartte
 Димитрова 70.JPG|Kaks'toštkümnežiruine eländpert' Venämas
 </gallery>
 
-== Eländkodihe sidodud vepsän muštatiž ==
+== Eländkodihe sidodud vepsän muštatišed ==
 <blockquote>
 * ''Pert' tehmata ei tule.''
+* ''Toižes kodiš i vet toižin kandištas.''
 </blockquote>
 
 == Kacu mugažo ==
