--- a/Vezi.mw
+++ b/Vezi.mw
@@ -27,6 +27,7 @@ Veden ninevuz om 0,9982 g/sm³, suladandlämuz om 0 C°, kehundtemperatur om lä
 * ''Kala vedeta ei elä.''
 * ''Leib da vezi — saldatan söm.''
 * ''Palanu lämoid ei varaida, a upnu — vet.''
+* ''Toižes kodiš i vet toižin kandištas.''
 * ''Tünäs vedes sured kalad kudodas.''
 * ''Vanh ak vinad job, laho pu vet vedab.''
 * ''Veden mödhe i vedehine löudase.''
