/* Naižhe sidodud vepsän muštatišed */ +

--- a/Naine.mw
+++ b/Naine.mw
@@ -12,6 +12,7 @@ Naižen alaigäčud oma [[neičukaine]] i [[neižne]].
 * ''Ak mužikatoi — kutnä haumeh aidatoi.''
 * ''Ak tespäi tagaiži pördlese, a mužik, hot' huba, ei pördelte.''
 * ''Hebon higoho da akan voikhu ala kacu.''
+* ''Kaiked tot akale ala sanu.''
 * ''Kana eile lind, ak eile ristit.''
 * ''Koume akad dai suim.''
 * ''Kut ei sättugoi länged sigale, muga ei sättu vin akale.''
