/* Sanha sidodud vepsän muštatišed */ +

--- a/Sana.mw
+++ b/Sana.mw
@@ -12,6 +12,7 @@ Klassificiruidas vaihid leksižen znamoičendan mödhe, sätas nimikirjutesid ez
 * ''Ala pagiže min tedad, a teda min pagižed.''
 * ''Čoma sana i kivehe reigun tegeb.''
 * ''Ei sur' sana sud haugoi.''
+* ''Kaiked tot akale ala sanu.''
 * ''Paha kel' pahan i pagižeb.''
 * ''Pahal ristitul mugomad i paginad.''
 * ''Pajatada om paremb ühtes, a pagišta eriži.''
