/* Sömhä sidodud vepsän muštatišed */ +

--- a/Söm.mw
+++ b/Söm.mw
@@ -40,6 +40,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 * ''Söid kut siga, läksid kut koza.''
 * ''Söm mehen kandišeb.''
 * ''Sömäta joksed läbi pöudos, a alasti ei sa.''
+* ''Tämbäi ed sö tulebid leibid.''
 </blockquote>
 
 == Homaičendad ==
