/* Heimolaižihe sidodud vepsän muštatišed */ +

--- a/Heimolaižuz.mw
+++ b/Heimolaižuz.mw
@@ -111,6 +111,7 @@
 * ''Ku mam om koirakaz, ka i tütar om hond.''
 * ''Meiden mind' linneb radon sijas.''
 * ''Pohjoižtulleiš eile lämäd, emindamas eile mamad.''
+* ''Poigas vähäd, tütres tühjad.''
 </blockquote>
 
 [[Kategorii:Kanz]]
