--- a/Sana.mw
+++ b/Sana.mw
@@ -21,6 +21,7 @@ Klassificiruidas vaihid leksižen znamoičendan mödhe, sätas nimikirjutesid ez
 * ''Sanub, kuti haugol pähä iškeb.''
 * ''Sinun sana da jumalale korvha.''
 * ''Teravas sanutud, da ei teravas tehtud.''
+* ''Tämbäi kelastad, homen ei uskkoi.''
 * ''Vähemba pagiže, enamban tedad.''
 * ''Äi sanoid, da vähä azjoid.''
 * ''Äjan tedad, vähä pagiže.''
