/* Ristithu sidodud vepsän muštatišed */ +

--- a/Ristit.mw
+++ b/Ristit.mw
@@ -32,6 +32,7 @@ Ristitun erigoičijad päpirdad oma püštoiged kävund, šingotadud päaivod, m
 * ''Pen' da tark, sur' da šläbäk.''
 * ''Ristit koleb, a živat kadob.''
 * ''Sogedale kulub, a kurdhele nägub.''
+* ''Uradoid ei semekoi, ei rahngoi, iče kazdas.''
 * ''Äi om hüvid, da vähä om armhid.''
 </blockquote>
 
