/* Ristithu sidodud vepsän muštatišed */ +

--- a/Ristit.mw
+++ b/Ristit.mw
@@ -22,6 +22,7 @@ Ristitun erigoičijad päpirdad oma püštoiged kävund, šingotadud päaivod, m
 
 == Ristithu sidodud vepsän muštatišed ==
 <blockquote>
+* ''Ala usko nikelle, kuni iče ed näge.''
 * ''Ei rad ristitud riko, a hol'.''
 * ''Hebod taganpäi, koirad edespäi, ristitud kaikiš polišpäi tarbiž varaita.''
 * ''Järed da äred, pen' da mahtav.''
