--- a/Sana.mw
+++ b/Sana.mw
@@ -22,6 +22,7 @@ Klassificiruidas vaihid leksižen znamoičendan mödhe, sätas nimikirjutesid ez
 * ''Sinun sana da jumalale korvha.''
 * ''Teravas sanutud, da ei teravas tehtud.''
 * ''Tämbäi kelastad, homen ei uskkoi.''
+* ''Vaikastuda eile petuz.''
 * ''Vähemba pagiže, enamban tedad.''
 * ''Äi sanoid, da vähä azjoid.''
 * ''Äjan tedad, vähä pagiže.''
