/* Ristithu sidodud vepsän muštatišed */ +

--- a/Ristit.mw
+++ b/Ristit.mw
@@ -34,6 +34,7 @@ Ristitun erigoičijad päpirdad oma püštoiged kävund, šingotadud päaivod, m
 * ''Ristit koleb, a živat kadob.''
 * ''Sogedale kulub, a kurdhele nägub.''
 * ''Uradoid ei semekoi, ei rahngoi, iče kazdas.''
+* ''Vanhemb norel ei küzuškande.''
 * ''Äi om hüvid, da vähä om armhid.''
 </blockquote>
 
