/* Ojatihe sidotud vepsän muštatiž */

--- a/Ojat'_(jogi).mw
+++ b/Ojat'_(jogi).mw
@@ -28,7 +28,7 @@ Keskaigan [[Baltijan meren suomalaižed heimod|Baltijan meren suomalaine heim]] 
 * [[Pecoil]]-külä
 * [[Vil'häl]]-külä
 
-== Ojatihe sidotud vepsän muštatiž ==
+== Ojatihe sidodud vepsän muštatiž ==
 <blockquote>
 * ''Ojatin lapsed seičemen üht ei varaikoi.''
 </blockquote>
