--- a/Laps'.mw
+++ b/Laps'.mw
@@ -7,7 +7,7 @@
 
 [[Lapsiden kaičendan päiv]] znamoičese joga voden 1. päiväl kezakud mail'madme.
 
-== Lapsihe sidotud vepsän muštatišed ==
+== Lapsihe sidodud vepsän muštatišed ==
 Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. — Lpp. 31−33. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref>
 <blockquote>
 * ''Anda, Jumal, laps, a lapsele mel't.''
@@ -28,6 +28,7 @@ Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi mel
 * ''Laskav laps' kaks' mamad imeb.''
 * ''Mam sötab lapsen nižal, ma leibäl.''
 * ''Maman heng palab lapsehe, a lapsen kivehe.'' (lapsiš kitändata)
+* ''Ojatin lapsed seičemen üht ei varaikoi.''
 * ''Openda last, kuni mučuine (kuni om nor').''
 * ''Openda last kuni poikpoli sijas magadab.''
 * ''Ozr orahaižes, a laps' vagahaižes.''
